Fixing distortion in main page on smartphone screens

--- a/motors-easy/src/main/resources/static/estilo/responsividade.css
+++ b/motors-easy/src/main/resources/static/estilo/responsividade.css
@@ -53,9 +53,6 @@ main{
     height: 12%;
     display: flex;
     flex-direction: row;
-
-    z-index: 100;
-    position: absolute;
 }
 
 
